[workspace]
resolver = "3"
members = ["martin", "martin-core", "martin-tile-utils", "mbtiles"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/maplibre/martin"
rust-version = "1.94"
homepage = "https://martin.maplibre.org/"

[workspace.lints.rust]
unused_qualifications = "warn"
# Lint inheritance from workspace is not yet supported
# Crate mbtiles uses unsafe code, so we can't forbid it here
# unsafe_code = "forbid"

[workspace.lints.clippy]
# Restrictions
absolute_paths = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
exit = "warn"
format_push_string = "warn"
lossy_float_literal = "warn"
mem_forget = "warn"
negative_feature_names = "warn"
panic = "warn"
panic_in_result_fn = "warn"
print_stderr = "warn"
print_stdout = "warn"
redundant_feature_names = "warn"
redundant_type_annotations = "warn"
same_name_method = "warn"
string_slice = "warn"
todo = "warn"
try_err = "warn"
unimplemented = "warn"
unnecessary_safety_doc = "warn"
unwrap_used = "warn"
unused_trait_names = "warn"
use_self = "warn"
verbose_file_reads = "warn"

# Pedantics without being too noisy
pedantic = { level = "warn", priority = -1 }
derive_partial_eq_without_eq = "allow"
enum_variant_names = "allow"
implicit_hasher = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
struct_field_names = "allow"

[workspace.dependencies]
actix-cors = "0.7"
actix-http = "3"
actix-middleware-etag = "0.5.0"
actix-rt = "2"
actix-web = "4"
actix-web-prom = "0.10.0"
actix-web-static-files = "4"
anyhow = "1.0"
approx = "0.5.1"
async-trait = "0.1"
backon = "1.6.0"
base64 = "0.22.1"
bit-set = "0.10"
brotli = ">=5, <9"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
clap = { version = "4", features = ["derive", "unstable-markdown", "wrap_help"] }
criterion = { version = "0.8", features = ["async_futures", "async_tokio", "html_reports"] }
csscolorparser = "0.8"
dashmap = { version = "6.1.0", features = ["serde", "inline", "rayon"] }
deadpool = "0.13.0"
deadpool-postgres = "0.14"
derive-debug = "0.1.2"
duckdb = { version = "1.10503.1", features = ["bundled", "parquet"] }
enum-display = "0.2"
env_logger = "0.11"
fast-mvt = { version = "0.4", default-features = false, features = ["reader"] }
flate2 = "1"
flume = "0.12"
futures = "0.3"
geo = "0.33.1"
geo-index = { version = "0.3.3", features = ["rayon"] }
geo-types = "0.7.18"
geojson = { version = "1", features = ["geo-types"] }
geozero = { version = "0.15.1", features = ["with-mvt", "with-geo"] }
hotpath = "0.21"
humantime-serde = "1.1.1"
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg", "webp"] }
image-compare = "0.5"
indicatif = "0.18.3"
indoc = "2"
insta = "1.46.3"
itertools = "0.15"
json-patch = "4"
lambda-web = { version = "0.2.1", features = ["actix4"] }
log = "0.4"
maplibre_native = "0.8.3"
martin-core = { path = "./martin-core", version = "0.9.0", default-features = false }
martin-tile-utils = { path = "./martin-tile-utils", version = "0.7.5" }
mbtiles = { path = "./mbtiles", version = "0.18.1" }
md5 = "0.8.0"
miette = { version = "7.6", features = ["fancy"] }
mlt-core = { version = "0.12", default-features = false }
moka = { version = "0.12", default-features = false }
notify = "8.2.0"
num_cpus = "1"
object_store = { version = "0.14.0", features = ["gcp", "aws", "azure", "fs", "http"] }
pbf_font_tools = { version = "3.1.1", features = ["freetype"] }
pmtiles = { version = "0.23.0", default-features = false, features = ["tilejson", "object-store"] }
png = "0.18.0"
postgis = "0.9"
postgres = { version = "0.19", features = [
    "with-time-0_3",
    "with-uuid-1",
    "with-serde_json-1",
] }
postgres-protocol = "0.6"
pretty_assertions = "1"
prometheus = { version = "0.14", default-features = false }
rayon = "1.11.0"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2"] }
rstest = "0.26.1"
rustls = "0.23.38"
# ring feature does not require NASM windows executable, but works slower
#rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "ring"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2"
schemars = { version = "1.2", default-features = false, features = ["chrono04", "derive", "std"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde-saphyr = { version = "0.0.28", features = ["miette", "properties"] }
serde_json = "1"
serde_with = { version = "3", default-features = false, features = ["macros"] }
size_format = "1.0.2"
spreet = { version = "0.13", default-features = false }
sqlite-compressions = { version = "0.3", default-features = false, features = ["bsdiffraw", "gzip"] }
sqlite-hashes = { version = "0.10.6", default-features = false, features = ["md5", "aggregate", "hex"] }
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio"] }
static-files = "0.2"
strum = { version = "0.28", features = ["derive"] }
tempfile = "3.21.0"
test_each_file = "0.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres", "blocking", "minio"] }
thiserror = "2"
tiff = "0.11.1"
tilejson = "0.4"
tokio = { version = "1", features = ["macros"] }
tokio-postgres-rustls = "0.14"
tracing = "0.1.44"
tracing-actix-web = "0.7.21"
tracing-indicatif = "0.3"
tracing-log = { version = "0.2.0", features = ["interest-cache"] }
tracing-subscriber = { version = "0.3", default-features = false }
tracing-test = "0.2"
url = "2.5"
utoipa = { version = "5.4", default-features = false, features = ["chrono", "macros", "actix_extras"] }
walkdir = "2.5.0"
wiremock = "0.6"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zstd = "0.13"

[profile.dev.package]
# See https://github.com/launchbadge/sqlx#compile-time-verification
sqlx-macros.opt-level = 3
# See https://docs.rs/insta/latest/insta/#optional-faster-runs
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
# Make release binaries a bit smaller
lto = true
codegen-units = 1
