[package]
name = "martin-config-macros"
version = "0.1.0"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>", "MapLibre contributors"]
description = "Derive macros for MapLibre's Martin tile server configuration types."
keywords = ["maps", "tiles", "tileserver", "proc-macro"]
categories = ["science::geo"]
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
serde.workspace = true

[lints]
workspace = true
