[package]
name = "martin-core"
version = "0.1.3"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>", "MapLibre contributors"]
description = "Basic building blocks of MapLibre's Martin tile server."
keywords = ["maps", "tiles", "mvt", "tileserver"]
categories = ["science::geo", "parsing"]
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[features]
default = [
    "fonts",
    "mbtiles",
    "pmtiles",
    "postgres",
    "sprites",
    "styles",
    "unstable-cog",
]
postgres = [
    "dep:deadpool-postgres",
    "dep:postgres",
    "dep:regex",
    "dep:rustls",
    "dep:rustls-native-certs",
    "dep:rustls-pemfile",
    "dep:semver",
    "dep:tokio-postgres-rustls",
    "dep:serde_json",
    "_tiles",
]
unstable-cog = ["dep:png", "dep:tiff", "_tiles"]
fonts = [
    "dep:bit-set",
    "dep:pbf_font_tools",
    "dep:regex",
    "dep:itertools",
    "dep:dashmap",
]
sprites = [
    "dep:actix-web",
    "dep:spreet",
    "dep:tokio",
    "tokio/fs",
    "dep:futures",
    "dep:dashmap",
]
styles = ["dep:walkdir", "tokio/fs", "dep:dashmap"]
mbtiles = ["dep:mbtiles", "_tiles"]
pmtiles = ["dep:pmtiles", "dep:object_store", "_tiles"]
_tiles = []

[dependencies]
actix-web = { workspace = true, optional = true }
async-trait.workspace = true
bit-set = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }
deadpool-postgres = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
itertools = { workspace = true, optional = true }
log.workspace = true
martin-tile-utils.workspace = true
mbtiles = { workspace = true, optional = true }
moka.workspace = true
object_store = { workspace = true, optional = true }
pbf_font_tools = { workspace = true, optional = true }
pmtiles = { workspace = true, optional = true }
png = { workspace = true, optional = true }
postgres = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
semver = { workspace = true, optional = true }
serde.workspace = true
serde_json = { workspace = true, optional = true }
serde_with.workspace = true
spreet = { workspace = true, optional = true }
subst.workspace = true
thiserror.workspace = true
tiff = { workspace = true, optional = true }
tilejson.workspace = true
tokio = { workspace = true, optional = true }
tokio-postgres-rustls = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }

[dev-dependencies]
approx.workspace = true
insta = { workspace = true, features = ["json", "yaml"] }
rstest.workspace = true
testcontainers-modules.workspace = true
tokio.workspace = true

[lints]
workspace = true
