[package]
name = "martin-core"
version = "0.2.5"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>", "MapLibre contributors"]
description = "Basic building blocks of MapLibre's Martin tile server."
keywords = ["maps", "tiles", "mvt", "tileserver"]
categories = ["science::geo", "parsing"]
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[features]
default = [
    "fonts",
    "mbtiles",
    "pmtiles",
    "postgres",
    "sprites",
    "styles",
    "unstable-cog",
    "geojson",
]
geojson = [
    "dep:geojson",
    "dep:geo-index",
    "dep:geozero",
    "dep:i_overlay",
    "_tiles",
]
postgres = [
    "dep:deadpool-postgres",
    "dep:postgres",
    "dep:regex",
    "dep:rustls",
    "dep:rustls-native-certs",
    "dep:rustls-pemfile",
    "dep:semver",
    "dep:tokio-postgres-rustls",
    "dep:serde_json",
    "_tiles",
]
unstable-cog = ["dep:png", "dep:tiff", "_tiles"]
unstable-rendering = ["styles", "dep:maplibre_native", "dep:image"]
fonts = [
    "dep:bit-set",
    "dep:pbf_font_tools",
    "dep:regex",
    "dep:itertools",
    "dep:dashmap",
]
sprites = [
    "dep:actix-web",
    "dep:spreet",
    "dep:tokio",
    "tokio/fs",
    "dep:futures",
    "dep:dashmap",
]
styles = ["tokio/fs", "dep:dashmap"]
mbtiles = ["dep:mbtiles", "_tiles"]
pmtiles = ["dep:pmtiles", "dep:object_store", "_tiles"]
_tiles = ["dep:base64"]

[target.'cfg(target_os = "linux")'.dependencies]
image = { workspace = true, optional = true }
maplibre_native = { workspace = true, optional = true }

[dependencies]
actix-web = { workspace = true, optional = true }
async-trait.workspace = true
base64 = { workspace = true, optional = true }
bit-set = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }
deadpool-postgres = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
geo-index = { workspace = true, optional = true }
geojson = { workspace = true, optional = true }
geozero = { workspace = true, optional = true }
i_overlay = { workspace = true, optional = true }
itertools = { workspace = true, optional = true }
martin-tile-utils.workspace = true
mbtiles = { workspace = true, optional = true }
moka.workspace = true
object_store = { workspace = true, optional = true }
pbf_font_tools = { workspace = true, optional = true }
pmtiles = { workspace = true, optional = true }
png = { workspace = true, optional = true }
postgres = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
semver = { workspace = true, optional = true }
serde.workspace = true
serde_json = { workspace = true, optional = true }
serde_with.workspace = true
spreet = { workspace = true, optional = true }
subst.workspace = true
thiserror.workspace = true
tiff = { workspace = true, optional = true }
tilejson.workspace = true
tokio = { workspace = true, optional = true }
tokio-postgres-rustls = { workspace = true, optional = true }
tracing.workspace = true
xxhash-rust.workspace = true

[dev-dependencies]
actix-web.workspace = true
approx.workspace = true
bytes.workspace = true
env_logger.workspace = true
futures.workspace = true
insta = { workspace = true, features = ["json", "yaml"] }
rstest.workspace = true
serde_json.workspace = true
testcontainers-modules.workspace = true
tokio.workspace = true
url.workspace = true

[[example]]
name = "pmtiles-tileserver"
required-features = ["pmtiles"]

[lints]
workspace = true
