[package]
name = "martin-mbtiles"
version = "0.2.0"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>", "MapLibre contributors"]
description = "A simple low-level MbTiles access and processing library, with some tile format detection and other relevant heuristics."
keywords = ["mbtiles", "maps", "tiles", "mvt", "tilejson"]
exclude = [
    # Exclude the fixtures directory from the package - it's only used for tests.
    "/fixtures",
]
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
futures.workspace = true
log.workspace = true
martin-tile-utils.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tilejson.workspace = true

# Bin dependencies
# TODO: Make these only enabled for the bin target, i.e. by using a feature, and add a just task to run the bin
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true

[dev-dependencies]
# For testing, might as well use the same async framework as the Martin itself
actix-rt.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "mbtiles"
path = "src/bin/main.rs"
