lints.workspace = true

[package]
name = "martin-tile-utils"
version = "0.6.0"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>", "MapLibre contributors"]
description = "Utilities to help with map tile processing, such as type and compression detection. Used by the MapLibre's Martin tile server."
keywords = ["maps", "tiles", "mvt", "tileserver"]
categories = ["science::geo", "parsing"]
exclude = [
    # Exclude the fixtures directory from the package - it's only used for tests.
    "/fixtures",
]
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
brotli.workspace = true
flate2.workspace = true

[dev-dependencies]
approx.workspace = true
insta.workspace = true
