[package]
name = "martin-tile-utils"
version = "0.6.0"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>", "MapLibre contributors"]
description = "Utilities to help with map tile processing, such as type and compression detection. Used by the MapLibre's Martin tile server."
keywords = ["maps", "tiles", "mvt", "tileserver"]
categories = ["science::geo", "parsing"]
exclude = ["/fixtures", "Cargo.lock"]
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[dependencies]
brotli.workspace = true
flate2.workspace = true

[dev-dependencies]
approx.workspace = true
insta.workspace = true

[lints]
workspace = true
